reduce some fields user auth
