# apps/backend/auth-service/src/controllers/types/auth-response.type.ts
@@ -1,0 +1,8 @@
+export interface Response {
+  message: string;
+}
+
+export interface GoogleResponse {
+  message: string;
+  data: string;
+}
