# apps/backend/auth-service/src/services/types/auth-service.type.ts
@@ -1,16 +1,12 @@
-export interface CognitoIdentities {
-  dateCreated: string;
-  providerName: string;
-  userId: string;
-  providerType: string;
-  issuer: null;
-  primary: string;
-}
-
 export interface CognitoToken {
   accessToken: string;
   idToken: string;
   refreshToken: string;
-  username?: string;
-  userId?: string;
+  sub: string;
+}
+
+export interface UserInfoFromToken {
+  sub: string;
+  email: string;
+  [key: string]: any;
 }
