# apps/backend/user-service/src/database/models/user.model.ts
@@ -5,10 +5,9 @@ export interface IUser {
   _id: string;
   sub: string;
   googleSub: string;
-  facebookSub: string;
-  username: string;
+  firstName: string;
+  lastName: string;
   email: string;
-  phone_number: string;
   profile: string;
   gender: string;
   age: number;
@@ -21,20 +20,16 @@ export interface IUser {
 // Define the User schema
 const userSchema = new mongoose.Schema(
   {
+    _id: { type: String, required: true },
     sub: { type: String },
     googleSub: { type: String },
-    facebookSub: { type: String },
-    username: { type: String, required: true },
+    firstName: { type: String },
+    lastName: { type: String },
     email: { type: String, unique: true },
-    phone_number: { type: String },
-    profile: {
-      type: String,
-      default:
-        "https://microservice-sample-resource.s3.amazonaws.com/default_pic.jpg"
-    },
+    profile: { type: String },
     gender: { type: String },
     age: { type: Number },
-    role: { type: String, default: "user" },
+    role: { type: String, require: true },
     favorites: { type: [String], default: [] }
   },
   {
@@ -49,23 +44,6 @@ const userSchema = new mongoose.Schema(
 );
 
 userSchema.index({ email: 1 }, { unique: true });
-
-// Add custom validation to ensure that either email or phone_number is present
-userSchema.path("email").validate(function (value) {
-  // If email is not provided, phone_number must be present
-  if (!value && !this.phone_number) {
-    return false;
-  }
-  return true;
-}, "Either email or phone_number must be provided.");
-
-userSchema.path("phone_number").validate(function (value) {
-  // If phone_number is not provided, email must be present
-  if (!value && !this.email) {
-    return false;
-  }
-  return true;
-}, "Either phone_number or email must be provided.");
 
 // Create a Mongoose model
 const UserModel = mongoose.model<IUser>("User", userSchema);
